# rive-common

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  analysis_options.yaml  premake5_rive_plugin.lua  pubspec.yaml  rive_text.pc.in  update_dependencies.sh
android/: CMakeLists.txt  build.gradle
android/src/main/kotlin/app/rive/rive/: RivePlugin.kt
common_source/: audio_decode_worker.hpp  layout_engine_ffi_bindings.cpp  rive_audio_ffi_bindings.cpp
ios/: common.cpp  rive_common.podspec
ios/rive_text/: rive_text.cpp
lib/: layout_engine.dart  math.dart  platform.dart  rive_audio.dart  rive_taffy.dart  rive_text.dart  rive_web.dart  utilities.dart
lib/src/: dynamic_library_helper.dart  glyph_lookup.dart  layout_engine_ffi.dart  layout_engine_wasm.dart  platform_native.dart  platform_web.dart  rive_audio_ffi.dart  rive_audio_wasm.dart  rive_taffy_ffi.dart  rive_taffy_wasm.dart  rive_text_ffi.dart  rive_text_wasm.dart  rive_text_wasm_version.dart
lib/src/math/: aabb.dart  hit_test.dart  mat2d.dart  path_types.dart  segment2d.dart  transform_components.dart  vec2d.dart
lib/src/utilities/: dependency_sorter.dart  list_equality.dart
linux/: CMakeLists.txt  rive_plugin.cpp  rive_private.h
linux/include/rive_common/: rive_plugin.h
macos/: common.cpp  rive_common.podspec
macos/SheenBidi/Source/: SBBase.c  SBBase.h  SBParagraph.c
macos/rive_text/: rive_text.cpp
macos/taffy/: taffy.h
patches/: 0001-Changes-for-generic-Linux.patch
shared_lib/: build_shared.sh  build_taffy.sh
taffy_ffi/: Cargo.toml  build.sh  cbindgen.toml  example.c  rust-toolchain.toml
taffy_ffi/src/: lib.rs  taffy.h
taffy_ffi/src/types/: geometry.rs  layout.rs  mod.rs  style.rs
test/: layout_test.dart  taffy_test.dart
wasm/: build_wasm.sh  get_emcc.sh  layout_engine_wasm_bindings.cpp  package-lock.json  package.json  publish_wasm.sh  rive_audio_wasm_bindings.cpp  rive_taffy_bindings.cpp  rive_text_bindings.cpp
wasm/js/: externs_release.js  rive_text.js
wasm/test/: audio.test.js  taffy.test.js
windows/: CMakeLists.txt  rive_plugin.cpp
windows/include/rive_common/: rive_plugin.h
