[package]
name = "taffy_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# taffy = { version = "0.3.13", default-features = false, features = ["grid"] }
taffy = { git = "https://github.com/DioxusLabs/taffy", rev = "daa07e0", default-features = false, features = ["flexbox", "grid", "taffy_tree"] }

[profile.minimize]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
lto = "fat"

[workspace]
